# lumina

./: .gitignore  CMakeLists.txt  README.md
src/: main.cpp
src/lumina/: lumina.hpp
src/lumina/internal/: aabb.hpp  base.hpp  bvh.cpp  bvh.hpp  camera.hpp  intersect.hpp  kdtree.cpp  kdtree.hpp  material.hpp  matrix.hpp  mesh.hpp  microfacet.hpp  obj.hpp  ray.hpp  ref_idx.hpp  rng.hpp  sampling.hpp  scene.hpp  sphere.hpp  triangle.hpp  vector.hpp
